2023-08-20T08:08:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5916244883 # 1116
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
* notice: last 14d: unq all: 5 4146
* notice: prev accum: outdated-unq outdated-all / unq all: 1626 150316 / 1656 154519
* notice: next accum: outdated-unq outdated-all / unq all: 1626 150316 / 1658 154629
* notice: prev exec diff / last date diff / accum: unq all: +2 +110 -1 -122 / +2 +110 -0 -0 / 2 110
* notice: removed / changed dates: [] / [2023-08-06 2023-08-20]

2023-08-20T00:36:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5914368363 # 1115
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
* notice: last 14d: unq all: 5 4158
* notice: prev accum: outdated-unq outdated-all / unq all: 1625 150017 / 1656 154424
* notice: next accum: outdated-unq outdated-all / unq all: 1626 150316 / 1656 154519
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -45 / +2 +302 -0 -0 / 2 302
* notice: removed / changed dates: [2023-08-05] / [2023-08-06 2023-08-19]

2023-08-19T16:08:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5912343971 # 1114
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: last 14d: unq all: 5 4148
* notice: prev accum: outdated-unq outdated-all / unq all: 1625 150017 / 1656 154331
* notice: next accum: outdated-unq outdated-all / unq all: 1625 150017 / 1656 154424
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -93 / +2 +207 -0 -0 / 2 207
* notice: removed / changed dates: [] / [2023-08-05 2023-08-19]

2023-08-19T08:08:31Z: