@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-20T08:08:27Z",
-  "count" : 133,
-  "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -167, +300 ],
+  "timestamp" : "2023-08-20T16:08:19Z",
+  "count" : 40,
+  "count_minmax" : [ 40, 300 ],
+  "count_decinc" : [ -260, +300 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
