@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-20T08:08:27Z",
+  "timestamp" : "2023-08-20T16:08:19Z",
   "count_outdated" : 150316,
   "uniques_outdated" : 1626,
-  "count" : 154629,
+  "count" : 154722,
   "uniques" : 1658,
   "clones" : [
     {
       "timestamp": "2023-08-06T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 167, 300 ],
+      "count": 40,
+      "count_minmax": [ 40, 300 ],
+      "count_decinc": [ 260, 300 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-08-20T00:00:00Z",
-      "count": 110,
-      "count_minmax": [ 110, 110 ],
-      "count_decinc": [ 0, 110 ],
+      "count": 203,
+      "count_minmax": [ 110, 203 ],
+      "count_decinc": [ 0, 203 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
