@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-08-06T00:00:00Z",
-      "count": 133,
+      "count": 40,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-08-20T00:00:00Z",
-      "count": 110,
+      "count": 203,
       "uniques": 2
     }
   ]
