@@ -1,3 +1,12 @@
+2023-08-20T16:08:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5918369941 # 1117
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
+* notice: last 14d: unq all: 5 4146
+* notice: prev accum: outdated-unq outdated-all / unq all: 1626 150316 / 1658 154629
+* notice: next accum: outdated-unq outdated-all / unq all: 1626 150316 / 1658 154722
+* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -93 / +2 +203 -0 -0 / 2 203
+* notice: removed / changed dates: [] / [2023-08-06 2023-08-20]
+
 2023-08-20T08:08:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5916244883 # 1116
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
